--- a/src/components/progressbar/style.css
+++ b/src/components/progressbar/style.css
@@ -1,13 +1,13 @@
 .progressbar {
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    height: 10px;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  height: 10px;
 }
 .progressbar .inner {
-    transition: width .3s ease-out;
-    background: red;
-    height: 10px;
-    width: 10%;
+  transition: width 0.3s ease-out;
+  background: red;
+  height: 10px;
+  width: 10%;
 }
