--- a/src/components/restaurant/style.css
+++ b/src/components/restaurant/style.css
@@ -1,6 +1,6 @@
 .restaurant {
-    border: 1px solid gray;
-    border-radius: .5em;
-    margin-bottom: 1em;
-    padding: 1em;
+  border: 1px solid gray;
+  border-radius: 0.5em;
+  margin-bottom: 1em;
+  padding: 1em;
 }
