--- a/src/components/restaurants/style.css
+++ b/src/components/restaurants/style.css
@@ -1,11 +1,11 @@
 .tabs {
-    margin-bottom: 1em;
+  margin-bottom: 1em;
 }
 
 .tabs button {
-    margin-right: .5em;
+  margin-right: 0.5em;
 }
 
 .tabs button.active {
-    background: yellow;
+  background: yellow;
 }
